--- a/Scooter/app/src/main/res/values/colors.xml
+++ b/Scooter/app/src/main/res/values/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple200">#BB86FC</color>
-    <color name="purple500">#6200EE</color>
-    <color name="purple700">#FF4671</color>
-    <color name="teal200">#03DAC5</color>
+    <color name="colorPrimary">#FF4671</color>
+    <color name="colorPrimaryDark">#FF4671</color>
+    <color name="colorAccent">#FF4671</color>
 </resources>
