--- a/Scooter/app/src/main/res/values/themes.xml
+++ b/Scooter/app/src/main/res/values/themes.xml
@@ -1,19 +1,18 @@
 <resources>
-    <!-- Base application theme. -->
-    <style name="Theme.Scooter" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/purple500</item>
-        <item name="colorPrimaryDark">@color/purple700</item>
-        <item name="colorAccent">@color/teal200</item>
+
+    <style name="Theme.Scooter" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="Theme.Scooter.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
+    <!--    <style name="Theme.Scooter.NoActionBar">-->
+    <!--        <item name="windowActionBar">false</item>-->
+    <!--        <item name="windowNoTitle">true</item>-->
+    <!--    </style>-->
 
-    <style name="Theme.Scooter.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <!--    <style name="Theme.Scooter.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />-->
 
-    <style name="Theme.Scooter.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <!--    <style name="Theme.Scooter.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
 
 </resources>
